# qiskit-trev

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gpu-test.yml  test.yml
src/qiskit_trev/: __init__.py  converter.py  estimator.py  gradient.py  hamiltonian.py  model.py  sampler.py
src/qiskit_trev/measure/: efficient_contraction.py  full_contraction.py  perfect_sampling.py  right_suffix.py
src/qiskit_trev/optimization/: __init__.py  base.py  cma_es.py  cma_es_optimizer.py  gradient_optimizer.py
src/qiskit_trev/tensor_ring/: __init__.py  contraction.py  gates.py  state.py
tests/: conftest.py  test_batch_gradient.py  test_cma_es.py  test_converter.py  test_estimator.py  test_hamiltonian.py  test_model.py  test_optimizer.py  test_sampler.py  utils.py
tests/measure/: test_cross_method.py  test_efficient_contraction.py  test_full_contraction.py  test_perfect_sampling.py  test_right_suffix.py
tests/tensor_ring/: test_contraction.py  test_contraction_batch.py  test_gates.py  test_state.py  test_state_batch.py
