[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qiskit-trev"
version = "0.1.0"
description = "GPU-accelerated tensor ring VQA simulation plugin for Qiskit, powered by PyTorch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Keunjun Park" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "Operating System :: OS Independent",
]
dependencies = [
    "qiskit>=1.0",
    "numpy>=1.23.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ci = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/keunjunpark/qiskit-trev"
Repository = "https://github.com/keunjunpark/qiskit-trev"
Issues = "https://github.com/keunjunpark/qiskit-trev/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gpu: requires NVIDIA GPU with CUDA",
]

[tool.coverage.run]
source = ["qiskit_trev"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.setuptools.packages.find]
where = ["src"]
